add dynamic prediction trajectory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,7 +118,7 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
+  #include
   ${catkin_INCLUDE_DIRS}
   include${PCL_INCLUDE_DIRS}
 )
@@ -138,6 +138,9 @@ include_directories(
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(viz src/viz.cpp)
 add_executable(ball src/ball.cpp)
+add_executable(trajectory src/trajectory.cpp)
+add_executable(KF_trajectory src/KF_trajectory.cpp)
+add_executable(KF_trajectory20191225 src/KF_trajectory20191225.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -155,6 +158,18 @@ target_link_libraries(viz
   ${PCL_LIBRARIES}
 )
 target_link_libraries(ball
+  ${catkin_LIBRARIES}
+  ${PCL_LIBRARIES}
+)
+target_link_libraries(trajectory
+  ${catkin_LIBRARIES}
+  ${PCL_LIBRARIES}
+)
+target_link_libraries(KF_trajectory
+  ${catkin_LIBRARIES}
+  ${PCL_LIBRARIES}
+)
+target_link_libraries(KF_trajectory20191225
   ${catkin_LIBRARIES}
   ${PCL_LIBRARIES}
 )
