modify compesation value and plot figure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,6 +151,8 @@ add_executable(viz20200302 src/viz20200302.cpp)
 add_executable(viz20200320 src/viz20200320.cpp)
 add_executable(viz_prediction src/viz_prediction.cpp)
 add_executable(stereoooo src/stereoooo.cpp)
+add_executable(predction_9step_offline src/predction_9step_offline.cpp)
+add_executable(predction_9step_concept src/predction_9step_concept.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -220,6 +222,16 @@ target_link_libraries(viz_prediction
 )
 
 target_link_libraries(stereoooo
+  ${catkin_LIBRARIES}
+  ${PCL_LIBRARIES}
+)
+
+target_link_libraries(predction_9step_offline
+  ${catkin_LIBRARIES}
+  ${PCL_LIBRARIES}
+)
+
+target_link_libraries(predction_9step_concept
   ${catkin_LIBRARIES}
   ${PCL_LIBRARIES}
 )
